defines custom height for toolbar when in landscape mode

--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -10,4 +10,11 @@
 
     <dimen name="zero_dp">0dp</dimen>
 
+    <!-- Toolbar -->
+    <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="toolbar_height">112dp</dimen>
+
+    <!-- list_top_margin needs to be greater than @toolbar_height -->
+    <dimen name="list_top_margin">116dp</dimen>
+
 </resources>
