--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -7,6 +7,7 @@
     android:layout_marginRight="4dp"
     android:layout_marginBottom="4dp"
     android:clickable="true"
+    android:elevation="@dimen/card_view_elevation"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
 
